# sar_drone_ws

./: .gitignore  CONTRIBUTING.md  GAZEBO_TEST_RESULTS.md  GPS_SAR_PIPELINE_README.md  LICENSE  LOCALIZATION_FIX_2025-12-05.md  LOCALIZATION_FIX_SUMMARY.md  LOCALIZATION_VERIFICATION.md  NETWORK_TEST_STATUS.md  QUICK_START_NETWORK.md  README.md  ROS2_NETWORK_SETUP.md  SMOKE_TEST_RESULTS.md  frames.gv  frames_2026-01-18_15.20.04.gv  frames_2026-01-18_15.32.37.gv  frames_2026-01-18_15.33.01.gv  frames_2026-01-18_15.39.17.gv  frames_2026-01-18_15.39.53.gv  frames_2026-01-18_15.53.08.gv  frames_2026-01-18_20.33.34.gv  simulation_log.txt  simulation_log_20260118_162554.txt  simulation_log_20260118_163438.txt  simulation_log_20260118_163649.txt  simulation_log_20260118_175506.txt  simulation_log_20260118_175516.txt  simulation_log_20260118_181335.txt  simulation_log_20260118_182118.txt  simulation_log_20260118_182828.txt  simulation_log_20260118_184318.txt  simulation_log_20260118_185035.txt  simulation_log_20260118_191110.txt  simulation_log_20260118_191729.txt  simulation_log_20260118_202523.txt  simulation_log_20260118_203235.txt  simulation_log_20260121_094431.txt  simulation_log_20260121_094913.txt  simulation_log_20260124_152351.txt  simulation_log_20260124_152856.txt  (+3 more)
.devcontainer/: devcontainer.json
rosbag2_2026_01_18-15_23_29/: metadata.yaml
rosbag2_2026_01_18-15_23_51/: metadata.yaml
scripts/: build.sh  check_localization.sh  launch_all.sh  run.sh  setup.sh  (+3 more)
src/sar_bringup/: package.xml  setup.cfg  setup.py
src/sar_bringup/launch/: drone_nav2_full.launch.py  drone_sensors.launch.py  sim_nav2.launch.py
src/sar_drone_description/: CMakeLists.txt  package.xml
src/sar_drone_description/config/: bridge.yaml  ekf.yaml  nav2_params.yaml  slam_params.yaml  slam_toolbox_params.yaml
src/sar_drone_description/launch/: sar_ignition.launch.py  sar_nav2.launch.py  slam.launch.py
src/sar_drone_description/rviz/: sar_drone_view.rviz
src/sar_drone_description/urdf/: sar_drone.urdf.xacro
src/sar_drone_description/worlds/: sar_world.sdf
(+26 files in other folders)
