<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sar_bringup</name>
  <version>1.0.0</version>
  <description>SAR drone bringup launch files for simulation and real hardware</description>
  <maintainer email="qpisco@todo.todo">qpisco</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sar_drone_description</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>sar_perception</exec_depend>
  <exec_depend>sar_localization</exec_depend>
  <exec_depend>sar_nav_bridge</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>