<?xml version="1.0"?>
<package format="3">
  <name>sar_drone_description</name>
  <version>1.0.0</version>
  <description>SAR drone description for ROS 2 Humble and Gazebo Fortress</description>
  <maintainer email="developer@example.com">SAR Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Replaced gazebo_ros with ros_gz -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>